tests/NormalTests/paczka1/small_fuzzy/37225202.err
Error in line 1: qhtG A83 251,1
Error in line 5: 08qQkTG1 S55 59,6
Error in line 7: 08qQkTG1 A176 25,0
